@@ -2,6 +2,7 @@ Changes in Verson 1.4.5
   o Added the 'flow' function to make flow plots
   o Added the 'vein' function to make vein plots
   o Fade now accepts numeric values, setting the exact fading (per edge)
+  o Added theme = "gimme", defaulting to posCol = "red", negCol = "blue", parallelEdge = TRUE and fade = FALSE
 
 Changes in Version 1.4.4
   o Fixed a bug in EBICglasso in which only nLambda = 100 was supported
